# mcgas

./: CMakeLists.txt
scripts/: average.py
src/: CMakeLists.txt  mcgas.c  mcgas.h  random.c  random.h  render.c  render.h
